# jobq

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  example-docker.yaml  example_1.py  example_hello.py  example_hello_prod.py  example_mnist_tf.py  index.yaml  latest  mkdocs.yml  mnist_tf.py  pyproject.toml  raycluster-manifest.yaml  raycluster-values.yaml  requirements-dev.txt  requirements.txt  single-clusterqueue-setup.yaml  versions.json
.github/workflows/: backend-docker.yaml  backend-helm.yaml  backend-python.yaml  client-python.yaml  docs.yaml  python.yaml  release.yaml  test-and-lint.yaml  watcher.yaml
0.1.0.pre3/: 404.html  index.html  objects.inv
0.1.0.pre5/: index.html
0.1.0.pre6/cli/: index.html
0.1.0.pre6/quickstart/: index.html
0.1.0.pre7/: 404.html
0.1.0.pre7/search/: search_index.json
0.1.0.pre9/: 404.html  index.html  objects.inv
0.1.0.pre9/CONTRIBUTING/: index.html
0.1.0.pre9/_scripts/: gen_api_ref_pages.py
0.1.0.pre9/cli/: index.html
0.1.0.pre9/quickstart/: index.html
architecture/: kueue-workload-lifecycle.md
architecture/structurizr/: workspace.dsl
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  skaffold.yaml
backend/deploy/jobq-server/: Chart.yaml  README.md  values.yaml
backend/deploy/jobq-server/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
backend/deploy/jobq-server/templates/tests/: test-connection.yaml
backend/deploy/jobs-server/: Chart.yaml  README.md  values.yaml
backend/deploy/jobs-server/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
backend/deploy/jobs-server/templates/tests/: test-connection.yaml
backend/src/jobq_server/: __main__.py  exceptions.py  models.py
backend/src/jobq_server/dependencies/: __init__.py
backend/src/jobq_server/routers/: builds.py  jobs.py
backend/src/jobq_server/runner/: __init__.py  base.py  docker.py  kueue.py  ray.py
backend/src/jobq_server/services/: __init__.py  k8s.py
backend/src/jobq_server/utils/: k8s.py  kueue.py  processes.py
backend/src/jobq_server/utils/assembler/: config.py  renderers.py
backend/src/jobs_server/: __main__.py  exceptions.py  models.py
backend/src/jobs_server/dependencies/: __init__.py
backend/src/jobs_server/routers/: jobs.py
backend/src/jobs_server/runner/: __init__.py  base.py  docker.py  kueue.py  ray.py
backend/src/jobs_server/services/: k8s.py
backend/src/jobs_server/utils/: fastapi.py  helpers.py  k8s.py  kubernetes.py  kueue.py
backend/tests/e2e/: clusters.py  conftest.py  test_example.py  test_jobs.py
backend/tests/e2e/resources/job-image/: Dockerfile  jobs_execute  ray
backend/tests/integration/: conftest.py  test_health.py  test_jobs.py  test_submission.py
backend/tests/unit/: test_helpers.py  test_k8s.py  test_models.py
charts/: jobq-server-0.1.0.tgz  jobq-server-0.1.1.tgz
client/: example-docker.yaml  example-hello.yaml  example-requirements.txt  example_hello.py  example_hello_prod.py  example_mnist_tf.py  hello-docker.yaml  mkdocs.yml  openapi_client-1.0.0-py3-none-any.whl  pyproject.toml  requirements-dev.txt  requirements.txt
client/docs/: cli.md  index.md  quickstart.md
client/docs/_scripts/: gen_api_ref_pages.py
client/docs/concepts/: _index.md  identifiers.md  index.md  lifecycle.md
client/docs/guide/: server-deployment.md
client/examples/: example-hello.yaml  example-mnist.yaml  example_hello.py  example_hello_prod.py  example_mnist_tf.py  mnist_tf.py
client/hack/: openapi-regen.sh
client/src/cli/: __init__.py  parser.py  types.py
client/src/cli/commands/: config.py  list.py  logs.py  status.py  stop.py  submit.py  util.py
client/src/jobq/: job.py
client/src/jobq/assembler/: config.py  renderers.py
client/src/jobs/: __init__.py  cli.py  job.py  submission_context.py  types.py
client/src/jobs/assembler/: renderers.py
client/src/jobs/runner/: base.py  ray.py
client/src/jobs/utils/: helpers.py  processes.py
client/src/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
client/src/openapi_client/api/: default_api.py  job_management_api.py
client/src/openapi_client/docs/: CreateJobModel.md  ExecutionMode.md  HTTPValidationError.md  JobManagementApi.md  JobOptions.md  ResourceOptions.md  SchedulingOptions.md  ValidationError.md  ValidationErrorLocInner.md  WorkloadIdentifier.md
client/src/openapi_client/models/: __init__.py  create_job_model.py  execution_mode.py  http_validation_error.py  job_options.py  job_status.py  list_workload_model.py  resource_options.py  scheduling_options.py  validation_error.py  validation_error_loc_inner.py  workload_admission.py  workload_identifier.py  workload_metadata.py  workload_spec.py  workload_status.py
client/src/openapi_client/test/: test_create_job_model.py  test_execution_mode.py  test_http_validation_error.py  test_job_management_api.py  test_job_options.py  test_resource_options.py  test_scheduling_options.py  test_validation_error.py  test_validation_error_loc_inner.py  test_workload_identifier.py
client/tests/integration/: test_cli.py
client/tests/smoke/: test_build_from_yaml.py  test_image_spec.py
client/tests/smoke/_data/: docker.yaml
client/tests/unit/: test_job.py
development/: 404.html  index.html  objects.inv
development/CONTRIBUTING/: index.html
development/cli/: index.html
development/quickstart/: index.html
development/search/: search_index.json
docs/: index.md
docs/_scripts/: gen_api_ref_pages.py
docs/_styles/: extra.css
docs/guide/: _index.md  declarative_containers.md  execution-modes.md
hack/: bootstrap-demo-env.sh
infra/: Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  vm-startup.sh
kueue-dashboard/: .eslintrc.cjs  Caddyfile  index.html  package-lock.json
kueue-dashboard/src/: App.css  App.tsx  Queue.css  Queue.tsx  Workload.css  (+2 more)
scripts/: dev-cluster-connect.sh
watcher/: .gitignore  README.md  go.mod  go.sum  main.go  skaffold.yaml
(+260 files in other folders)
