[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-queue"
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["docker", "kubernetes", "ray[train]", "tensorflow"]

[project.scripts]
jobs_execute = "jobs.execute:execute"

[project.optional-dependencies]
dev = ["black", "ruff", "ruff-lsp", "pytest","pre-commit"]

[tool.setuptools.package-data]
"jobs.assets" = ["*.yaml"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F841"]
