[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-queue"
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker",
    "kubernetes",
    "ray[train,default]==2.34.0",
    "tensorflow",
]

[project.scripts]
jobs_execute = "jobs.execute:execute"
jobby = "jobs.cli:main"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pre-commit"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F841"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
python_version = "3.10"
strict_optional = true
warn_unreachable = true
show_column_numbers = true
show_absolute_path = true
