[project]
name = "jobq"
version = "0.0.0"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-callouts",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-include-dir-to-nav",
    "black",                     # formatting of signatures in docs
    "mike",
    "docstring-parser",
]

[tool.ruff]
preview = true
exclude = ["openapi_client"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
    "C4",
    "PYI",
    "FAST",
    "PTH",
    "T10",  # prevent stray debug breakpoints
]
ignore = [
    "E501",    # Line too long
    "RUF029",  # Unused Async (FastAPI routes are async)
    "FAST003", # FastAPI unused path parameter (they can be consumed by dependencies)
]
