[build-system]
requires = ["setuptools>=62", "setuptools-scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aai-jobq-server"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "appliedAI Institute for Europe", email = "opensource@appliedai-institute.de" },
]
maintainers = [
    { name = "Nicholas Junge", email = "n.junge@appliedai-institute.de" },
    { name = "Max Mynter", email = "m.mynter@appliedai-institute.de" },
    { name = "Adrian Rumpold", email = "a.rumpold@appliedai-institute.de" },
]
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi",
    "uvicorn",
    "docker",
    "kubernetes",
    "aai-jobq",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "fastapi[standard]",
    "build",
    "ruff",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pre-commit",
    "testcontainers",
]

# Automatically determine version number from Git tags
[tool.setuptools_scm]
root = ".."

[tool.ruff]
extend = "../pyproject.toml"
src = ["src"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
python_version = "3.11"
strict_optional = true
warn_unreachable = true
show_column_numbers = true
show_absolute_path = true

[tool.coverage.report]
exclude_also = ["@overload", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
markers = [
    "e2e: mark a test as an end-to-end test (requires Kubernetes tooling)",
]

[tool.uv.sources]
aai-jobq = { git = "https://github.com/aai-institute/jobq", branch = "main", subdirectory = "client" }
